- Chat lines of dead players are marked with "*DEAD*" in front of them
- Voting outcome messages show how many players voted for/against the poll and how many didn't vote yet
- Added support for armagetronad URLs on Mac OS X and KDE -- armagetronad://<server>[:<port>]. port defaults to 4534.
- New command-line flag: --connect <server>[:<port>]. Startup the game and connect directly to <server>.

Changes since 0.2.8.3_beta2:
============================
- Fixed 'invincibility' bug. It really was cycles freezing in time.
- Fixed sporadic sound related crash at round end.
- setting rename: SILENCE_ALL -> SILENCE_DEFAULT.
- Sound no longer gets muted after you switch the sound settings.
- Fixed object collision detection that would sometimes pick a wrong 
  wall to collide with, most likely the reason behind wrongly accredited
  kills.
- Fixed inability to switch viewport assignment in four player mode.
- Better handling of lag clusterbombs.
- Server disconnects now also take immediate effect even when you're
  in a menu or chatting.

Changes since 0.2.8.3_beta1:
============================

- Made ready for Armatrators
- Authentication routines now use utf8 as forward- compatibility with
  trunk. Previously, non-ASCII usernames simply didn't work at all.
- Better lag slide protection: clients no longer get confused when
  the server sends their cycle back in time, and the server no longer
  does that for old clients.
- Fixed rare wallpassing bug; it required what whould usually be an
  instakill and infinte wall length.

Changes since 0.2.8.2
=====================

New settings
------------

  New settings and commands:
- MIN_PLAY_TIME_*: minimal play time required before you are allowed to
  play on this server.
- SPAM_AUTOKICK_COUNT: minimal number of spam warning messages you get in a
  row before you get kicked.
- FORTRESS_COLLAPSE_SPEED: tune the collapse speed of fortress zones.
- VOTE_KICK_REASON: default reason given on kick votes.